Configuração do Firebase no projeto, autenticação nas telas de cadastro e login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,28 +6,28 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/prateleira"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/prateleira"
         android:supportsRtl="true"
         android:theme="@style/Theme.ControleDeEstoque"
         tools:targetApi="31">
         <activity
-            android:name=".RecuperarContaActivity"
+            android:name=".autenticacao.RecuperarContaActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".autenticacao.LoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".CadastroActivity"
+            android:name=".autenticacao.CadastroActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
