--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,28 +13,28 @@
         android:theme="@style/Theme.ControleDeEstoque"
         tools:targetApi="31">
         <activity
-            android:name="com.example.controledeestoque.autenticacao.RecuperarContaActivity"
+            android:name=".autenticacao.RecuperarContaActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.controledeestoque.autenticacao.LoginActivity"
+            android:name=".autenticacao.LoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.controledeestoque.autenticacao.CadastroActivity"
+            android:name=".autenticacao.CadastroActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.controledeestoque.SplashActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +47,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.controledeestoque.MainActivity"
+            android:name=".MainActivity"
             android:exported="false" />
     </application>
 
