Cadastro do Produto

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    viewBinding{
-        enabled = true
-    }
+
 }
 
 dependencies {
@@ -42,8 +40,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //FIREBASE
-    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+
 
     //SWIPEABLE
     implementation 'com.github.tsuryo:Swipeable-RecyclerView:1.1'
