add removendo imagem do produto

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,9 @@ dependencies {
     //TedPermission
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
-
     //SWIPEABLE
     implementation 'com.github.tsuryo:Swipeable-RecyclerView:1.1'
+
+    //PICASSO
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
